<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMain"
        android:contentDescription="@string/description"
        android:layout_width="412dp"
        android:layout_height="261dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/washing" />

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMain"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgroundrec" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/dela_gothic_one"
        android:text="@string/txtTitle"
        android:textColor="#33BAFA"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plainText"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:fontFamily="@font/dela_gothic_one"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/radioText"
        android:textColor="#5439CA"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBackground">

        <RadioButton
            android:id="@+id/rbWasher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/washer_button"
            android:textColor="#5439CA"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbTiller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/tiller_button"
            android:textColor="#5439CA"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbLeaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/leaf_button"
            android:textColor="#5439CA"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbAuger"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/auger_button"
            android:textColor="#5439CA"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etInputDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtDaysHint"
        android:inputType="number"
        android:minHeight="50dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup" />

    <TextView
        android:id="@+id/tvResults"

        android:textColor="#6026242C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/total_cost_of_rental_hints"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputDays" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:text="@string/btnTextCost"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResults" />

</androidx.constraintlayout.widget.ConstraintLayout>